--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
 </head>
 <!-- background colour -->
 <body id = "body" class="background" onload="init()">
-<!-- Left column -->
-<div id = "leftColumn" class = "columnL"></div>
-<!-- Right column -->
+<!-- navbar -->
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top navigationBar justify-content-center">
+        <a class="navbar-brand" href="#">
+            <img src="./miscImages/profilepic1.png" alt="Logo" style="width:50px;">
+        </a>
+        <button class="button navbar-btn white font-size-small" onclick="home()"> Home </button>
+        <button class="button navbar-btn white font-size-small" onclick="resume()"> Resume </button>
+        <button class="button navbar-btn white font-size-small" onclick="grades()"> Grades </button>
+    </nav>
+<br>
+<br>
+<br>
+<!-- body -->
 <div id="rightColumn" class = "columnR"></div>
 </body>
 </html>
