--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
  <!-- icon -->
 <link rel="icon" type="image/png" href="./miscImages/background.png"/>
-<!-- script -->
-<script src="client.js"></script> 
+<!-- Bootstrap CSS-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 <!-- style -->
 <link rel="stylesheet" href="style.css">
-<!-- bootstrapCDN -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- script -->
+<script src="client.js"></script> 
 <!-- title -->
 <title id="webTitle">Marco's webpage</title>
 </head>
@@ -32,5 +30,6 @@
 <br>
 <!-- body -->
 <div id="rightColumn" class = "columnR"></div>
+
 </body>
 </html>
