variable name changes
changes variable names

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <title id="webTitle">Marco's webpage</title>
 </head>
 <!-- background colour -->
-<body id = "body" class="background" onload="init()">
+<body class="background" onload="init()">
 <!-- navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top navigationBar justify-content-center">
         <a class="navbar-brand" href="#">
@@ -28,8 +28,8 @@
 <br>
 <br>
 <br>
-<!-- body -->
-<div id="rightColumn" class = "columnR"></div>
+<!-- content -->
+<div id="main"></div>
 
 </body>
 </html>
